--- a/neiltime-plugin.css
+++ b/neiltime-plugin.css
@@ -9,7 +9,6 @@
 
 .neiltime p {
     margin: 0 0 3px 0;
-    text-indent: 0 !important;
 }
 
 .neiltime-container{
@@ -46,7 +45,6 @@
     font-size: 14px;
     line-height: 1.5;
     min-height: 85px;
-    /* overflow: hidden; */
 }
 
 .neiltime-item-content .text {
@@ -60,7 +58,14 @@
 .neiltime-item-content h4 {
     margin: 0;
     font-size: 18px;
-    padding: 3px;
+    padding: 3px 25px;
+    margin-bottom: 20px;
+}
+
+.neiltime-item-content h4 p {
+    line-height: 2rem;
+    text-indent: inherit;
+    text-align: right;
 }
 
 .neiltime-item-content .box {
